- updated pods - added code signing

--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -994,7 +994,7 @@
                                     <popUpButton key="view" verticalHuggingPriority="750" id="86s-19-3Op">
                                         <rect key="frame" x="0.0" y="14" width="38" height="28"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                                        <popUpButtonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="arrowAtCenter" selectedItem="g9R-Ib-VhM" id="QDp-ep-0Ia">
+                                        <popUpButtonCell key="cell" type="roundTextured" bezelStyle="texturedRounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" pullsDown="YES" arrowPosition="arrowAtCenter" id="QDp-ep-0Ia">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="menu"/>
                                             <menu key="menu" id="hQD-RF-WYJ">
@@ -1009,8 +1009,20 @@
                                                     <menuItem isSeparatorItem="YES" id="tzK-qR-fGi"/>
                                                     <menuItem title="Refresh Automatically" state="on" id="g9R-Ib-VhM">
                                                         <modifierMask key="keyEquivalentModifierMask"/>
+                                                        <connections>
+                                                            <binding destination="E8W-Gv-fjB" name="value" keyPath="application.settings.automaticUpdate" id="XVU-6G-ogI">
+                                                                <dictionary key="options">
+                                                                    <bool key="NSAllowsEditingMultipleValuesSelection" value="NO"/>
+                                                                    <string key="NSValueTransformerName">AutomaticUpdateTransformer</string>
+                                                                </dictionary>
+                                                            </binding>
+                                                        </connections>
                                                     </menuItem>
-                                                    <menuItem title="Refresh" id="3if-UU-Y8u"/>
+                                                    <menuItem title="Refresh" id="3if-UU-Y8u">
+                                                        <connections>
+                                                            <action selector="refreshApplication:" target="E8W-Gv-fjB" id="FTS-dK-P88"/>
+                                                        </connections>
+                                                    </menuItem>
                                                 </items>
                                             </menu>
                                         </popUpButtonCell>
@@ -1033,6 +1045,7 @@
                     </connections>
                 </windowController>
                 <customObject id="9pG-Lf-0kW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
+                <userDefaultsController id="P4z-GB-c1S"/>
             </objects>
             <point key="canvasLocation" x="720" y="88"/>
         </scene>
@@ -1278,30 +1291,25 @@
                                         </textFieldCell>
                                     </textField>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Xac-Et-DWE">
-                                        <rect key="frame" x="3" y="13" width="194" height="15"/>
+                                        <rect key="frame" x="3" y="0.0" width="194" height="20"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="15" id="ff0-PW-cSU"/>
+                                            <constraint firstAttribute="height" constant="20" id="ff0-PW-cSU"/>
                                         </constraints>
+                                        <gestureRecognizers>
+                                            <clickGestureRecognizer delaysPrimaryMouseButtonEvents="YES" numberOfClicksRequired="1" id="1Xf-nl-d1A">
+                                                <connections>
+                                                    <action selector="toogleUpdateLabel:" target="0pb-y6-Tr2" id="SZN-Hi-9n9"/>
+                                                </connections>
+                                            </clickGestureRecognizer>
+                                        </gestureRecognizers>
                                         <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Updated" id="AhE-GQ-PZg">
                                             <font key="font" metaFont="miniSystem"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="rNy-0G-wwP">
-                                        <rect key="frame" x="3" y="0.0" width="194" height="13"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="13" id="8bs-Wz-Pz6"/>
-                                        </constraints>
-                                        <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Next Update" id="bk8-A6-dUW">
-                                            <font key="font" metaFont="miniSystem"/>
-                                            <color key="textColor" name="controlShadowColor" catalog="System" colorSpace="catalog"/>
-                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                        </textFieldCell>
-                                    </textField>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="rNy-0G-wwP" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="1mZ-tZ-nnm"/>
                                     <constraint firstItem="duH-jh-Fdz" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="1o5-1c-Ba2"/>
                                     <constraint firstAttribute="trailing" secondItem="NH0-cD-Izj" secondAttribute="trailing" constant="5" id="4Ca-5z-GhG"/>
                                     <constraint firstItem="Xac-Et-DWE" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="B6o-JV-DV6"/>
@@ -1309,8 +1317,7 @@
                                     <constraint firstItem="U5V-Jf-Pnn" firstAttribute="top" secondItem="fpg-Vy-Gnp" secondAttribute="top" constant="5" id="Fmn-NE-fyH"/>
                                     <constraint firstAttribute="trailing" secondItem="ecL-sY-6RS" secondAttribute="trailing" id="JAs-wj-bQm"/>
                                     <constraint firstAttribute="trailing" secondItem="Xac-Et-DWE" secondAttribute="trailing" constant="5" id="NkW-IS-t8B"/>
-                                    <constraint firstAttribute="trailing" secondItem="rNy-0G-wwP" secondAttribute="trailing" constant="5" id="PSo-at-2xH"/>
-                                    <constraint firstAttribute="bottom" secondItem="rNy-0G-wwP" secondAttribute="bottom" id="YVW-21-Y2K"/>
+                                    <constraint firstAttribute="bottom" secondItem="Xac-Et-DWE" secondAttribute="bottom" id="Q1x-W8-I51"/>
                                     <constraint firstItem="U5V-Jf-Pnn" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="acT-NJ-ylw"/>
                                     <constraint firstItem="duH-jh-Fdz" firstAttribute="top" secondItem="U5V-Jf-Pnn" secondAttribute="bottom" constant="5" id="bI6-3a-e7E"/>
                                     <constraint firstItem="NH0-cD-Izj" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="hFT-9l-5M7"/>
@@ -1319,7 +1326,6 @@
                                     <constraint firstAttribute="width" constant="200" id="j2X-6Q-CIf"/>
                                     <constraint firstAttribute="trailing" secondItem="duH-jh-Fdz" secondAttribute="trailing" constant="5" id="nL6-9x-CA5"/>
                                     <constraint firstAttribute="trailing" secondItem="U5V-Jf-Pnn" secondAttribute="trailing" constant="5" id="q58-sz-STV"/>
-                                    <constraint firstItem="rNy-0G-wwP" firstAttribute="top" secondItem="Xac-Et-DWE" secondAttribute="bottom" id="qOl-N9-5xC"/>
                                 </constraints>
                             </customView>
                         </subviews>
@@ -1336,7 +1342,6 @@
                         <outlet property="averageRatingCurrentLabel" destination="Ord-3f-03p" id="Neb-6E-rV6"/>
                         <outlet property="categoryLabel" destination="CuZ-iK-m4n" id="4wi-jV-JbK"/>
                         <outlet property="currentVersionStarRating" destination="Q7a-CE-04U" id="Q6v-ry-iEg"/>
-                        <outlet property="nextUpdatedLabel" destination="rNy-0G-wwP" id="Ps3-mu-WXR"/>
                         <outlet property="numberOfRatingsAllLabel" destination="HBC-En-0J8" id="zcn-VA-sec"/>
                         <outlet property="numberOfRatingsCurrentLabel" destination="BQ4-gv-NpL" id="qWD-Ce-7hl"/>
                         <outlet property="reviewsUpdatedAtLabel" destination="Xac-Et-DWE" id="qbc-Ro-zWW"/>
