--- a/AppstoreReviews/Base.lproj/Main.storyboard
+++ b/AppstoreReviews/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="7702"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -699,12 +700,37 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5CB-ef-M70">
+                                <rect key="frame" x="8" y="86" width="284" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Ifa-lL-i70"/>
+                                </constraints>
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Premium will give you access to..." id="utY-YA-V2A">
+                                    <font key="font" metaFont="system"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bb4-Bm-TLf">
+                                <rect key="frame" x="72" y="58" width="157" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="gVe-3t-Qfe"/>
+                                    <constraint firstAttribute="width" constant="145" id="yko-ES-qr0"/>
+                                </constraints>
+                                <buttonCell key="cell" type="push" title="Buy Premium" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oj4-cT-JmZ">
+                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                    <font key="font" metaFont="system"/>
+                                </buttonCell>
+                                <connections>
+                                    <action selector="premiumButtonClicked:" target="uib-Qp-duf" id="dZF-hw-ai8"/>
+                                </connections>
+                            </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5b4-Tf-YJm">
-                                <rect key="frame" x="8" y="196" width="284" height="20"/>
+                                <rect key="frame" x="8" y="25" width="284" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="aD3-ga-rgm"/>
                                 </constraints>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Development: Knut Inge Grosland" id="DzX-Ic-vdQ">
+                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="Development: Knut Inge Grosland" id="DzX-Ic-vdQ">
                                     <font key="font" metaFont="system"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
@@ -721,31 +747,6 @@
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="5CB-ef-M70">
-                                <rect key="frame" x="8" y="66" width="284" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="120" id="Ifa-lL-i70"/>
-                                </constraints>
-                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Premium will give you access to..." id="utY-YA-V2A">
-                                    <font key="font" metaFont="system"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bb4-Bm-TLf">
-                                <rect key="frame" x="72" y="38" width="157" height="32"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="gVe-3t-Qfe"/>
-                                    <constraint firstAttribute="width" constant="145" id="yko-ES-qr0"/>
-                                </constraints>
-                                <buttonCell key="cell" type="push" title="Buy Premium" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="oj4-cT-JmZ">
-                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
-                                    <font key="font" metaFont="system"/>
-                                </buttonCell>
-                                <connections>
-                                    <action selector="premiumButtonClicked:" target="uib-Qp-duf" id="dZF-hw-ai8"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="5CB-ef-M70" secondAttribute="trailing" constant="10" id="0OT-Qb-PXn"/>
@@ -760,14 +761,14 @@
                             <constraint firstAttribute="trailing" secondItem="jHM-PS-oit" secondAttribute="trailing" constant="10" id="IYk-Rt-DYc"/>
                             <constraint firstItem="jHM-PS-oit" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="RlR-23-ig9"/>
                             <constraint firstItem="ABH-g7-fai" firstAttribute="centerX" secondItem="0NS-o1-xLG" secondAttribute="centerX" id="Rof-g0-RAB"/>
+                            <constraint firstItem="5CB-ef-M70" firstAttribute="top" secondItem="JtC-cY-n52" secondAttribute="bottom" constant="20" id="Wlo-Sj-TwW"/>
                             <constraint firstAttribute="trailing" secondItem="0NS-o1-xLG" secondAttribute="trailing" constant="11" id="ZIB-iQ-vad"/>
                             <constraint firstAttribute="centerX" secondItem="bb4-Bm-TLf" secondAttribute="centerX" id="a8R-Pd-Fjf"/>
                             <constraint firstItem="jHM-PS-oit" firstAttribute="height" secondItem="5b4-Tf-YJm" secondAttribute="height" id="kvd-3k-MFi"/>
                             <constraint firstItem="5b4-Tf-YJm" firstAttribute="leading" secondItem="5rj-bW-yOJ" secondAttribute="leading" constant="10" id="oHe-b1-6Wg"/>
                             <constraint firstItem="bb4-Bm-TLf" firstAttribute="top" secondItem="5CB-ef-M70" secondAttribute="bottom" id="uCw-Ze-d3d"/>
-                            <constraint firstItem="5b4-Tf-YJm" firstAttribute="top" secondItem="JtC-cY-n52" secondAttribute="bottom" constant="10" id="ylf-2g-8cd"/>
+                            <constraint firstItem="jHM-PS-oit" firstAttribute="top" secondItem="5b4-Tf-YJm" secondAttribute="bottom" id="xqG-td-67Z"/>
                             <constraint firstItem="ABH-g7-fai" firstAttribute="width" secondItem="0NS-o1-xLG" secondAttribute="width" id="ymZ-fr-AFP"/>
-                            <constraint firstItem="5CB-ef-M70" firstAttribute="top" secondItem="5b4-Tf-YJm" secondAttribute="bottom" constant="10" id="znF-q3-Jec"/>
                         </constraints>
                     </view>
                     <connections>
@@ -833,12 +834,12 @@
             <objects>
                 <viewController storyboardIdentifier="ReviewViewController" id="XfG-lQ-9wD" customClass="ReviewViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="700"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <scrollView autohidesScrollers="YES" horizontalLineScroll="82" horizontalPageScroll="10" verticalLineScroll="82" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-8Z-Yg6">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <clipView key="contentView" id="Hjc-Hf-Qgr">
+                            <scrollView misplaced="YES" autohidesScrollers="YES" horizontalLineScroll="82" horizontalPageScroll="10" verticalLineScroll="82" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Azk-8Z-Yg6">
+                                <rect key="frame" x="0.0" y="100" width="600" height="600"/>
+                                <clipView key="contentView" misplaced="YES" id="Hjc-Hf-Qgr">
                                     <rect key="frame" x="1" y="17" width="238" height="117"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
@@ -1048,7 +1049,7 @@
                     <window key="window" title="Reviews" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" visibleAtLaunch="NO" animationBehavior="default" id="pOK-I8-SBO">
                         <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
-                        <rect key="contentRect" x="252" y="432" width="800" height="270"/>
+                        <rect key="contentRect" x="252" y="432" width="800" height="700"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1280" height="800"/>
                         <toolbar key="toolbar" implicitIdentifier="A3C4AD58-FB17-4D91-8BBE-6860C3D90131" autosavesConfiguration="NO" displayMode="iconOnly" sizeMode="regular" id="Rdn-WK-4WK">
                             <allowedToolbarItems>
@@ -1137,7 +1138,7 @@
                 <customObject id="9pG-Lf-0kW" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                 <userDefaultsController id="P4z-GB-c1S"/>
             </objects>
-            <point key="canvasLocation" x="720" y="88"/>
+            <point key="canvasLocation" x="714" y="-102"/>
         </scene>
         <!--Review Split View Controller-->
         <scene sceneID="ZMN-X7-X0t">
@@ -1165,14 +1166,14 @@
             <objects>
                 <viewController id="0pb-y6-Tr2" customClass="ReviewMenuViewController" customModule="AppstoreReviews" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" id="WLa-2E-WbT">
-                        <rect key="frame" x="0.0" y="0.0" width="200" height="660"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="700"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="fpg-Vy-Gnp">
-                                <rect key="frame" x="0.0" y="0.0" width="200" height="660"/>
+                                <rect key="frame" x="0.0" y="0.0" width="200" height="700"/>
                                 <subviews>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="U5V-Jf-Pnn" userLabel="Application Info">
-                                        <rect key="frame" x="5" y="525" width="190" height="130"/>
+                                        <rect key="frame" x="5" y="565" width="190" height="130"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="JmO-C5-33S">
                                                 <rect key="frame" x="0.0" y="100" width="190" height="20"/>
@@ -1256,7 +1257,7 @@
                                         </constraints>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="duH-jh-Fdz" userLabel="Current Version">
-                                        <rect key="frame" x="5" y="420" width="190" height="100"/>
+                                        <rect key="frame" x="5" y="460" width="190" height="100"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="x72-FL-mQt">
                                                 <rect key="frame" x="0.0" y="80" width="190" height="20"/>
@@ -1313,7 +1314,7 @@
                                         </constraints>
                                     </customView>
                                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="NH0-cD-Izj" userLabel="All Versions">
-                                        <rect key="frame" x="5" y="315" width="190" height="100"/>
+                                        <rect key="frame" x="5" y="355" width="190" height="100"/>
                                         <subviews>
                                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="V1L-LY-ccA">
                                                 <rect key="frame" x="0.0" y="80" width="190" height="20"/>
@@ -1369,6 +1370,12 @@
                                             <constraint firstItem="oOD-Iw-tqx" firstAttribute="height" secondItem="HBC-En-0J8" secondAttribute="height" id="wb8-ic-azI"/>
                                         </constraints>
                                     </customView>
+                                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="aoq-bR-DAH" customClass="PieChart">
+                                        <rect key="frame" x="5" y="160" width="190" height="190"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="aoq-bR-DAH" secondAttribute="height" multiplier="1:1" id="Opn-sy-Ugc"/>
+                                        </constraints>
+                                    </customView>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ecL-sY-6RS">
                                         <rect key="frame" x="0.0" y="0.0" width="200" height="30"/>
                                         <constraints>
@@ -1408,6 +1415,8 @@
                                     <constraint firstAttribute="trailing" secondItem="ecL-sY-6RS" secondAttribute="trailing" id="JAs-wj-bQm"/>
                                     <constraint firstAttribute="trailing" secondItem="Xac-Et-DWE" secondAttribute="trailing" constant="5" id="NkW-IS-t8B"/>
                                     <constraint firstAttribute="bottom" secondItem="Xac-Et-DWE" secondAttribute="bottom" id="Q1x-W8-I51"/>
+                                    <constraint firstItem="aoq-bR-DAH" firstAttribute="top" secondItem="NH0-cD-Izj" secondAttribute="bottom" constant="5" id="Xo3-KQ-Ddl"/>
+                                    <constraint firstAttribute="trailing" secondItem="aoq-bR-DAH" secondAttribute="trailing" constant="5" id="ZJO-PA-2sO"/>
                                     <constraint firstItem="U5V-Jf-Pnn" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="acT-NJ-ylw"/>
                                     <constraint firstItem="duH-jh-Fdz" firstAttribute="top" secondItem="U5V-Jf-Pnn" secondAttribute="bottom" constant="5" id="bI6-3a-e7E"/>
                                     <constraint firstItem="NH0-cD-Izj" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="hFT-9l-5M7"/>
@@ -1416,6 +1425,7 @@
                                     <constraint firstAttribute="width" constant="200" id="j2X-6Q-CIf"/>
                                     <constraint firstAttribute="trailing" secondItem="duH-jh-Fdz" secondAttribute="trailing" constant="5" id="nL6-9x-CA5"/>
                                     <constraint firstAttribute="trailing" secondItem="U5V-Jf-Pnn" secondAttribute="trailing" constant="5" id="q58-sz-STV"/>
+                                    <constraint firstItem="aoq-bR-DAH" firstAttribute="leading" secondItem="fpg-Vy-Gnp" secondAttribute="leading" constant="5" id="x2v-U1-OyG"/>
                                 </constraints>
                             </customView>
                         </subviews>
@@ -1434,6 +1444,7 @@
                         <outlet property="currentVersionStarRating" destination="Q7a-CE-04U" id="Q6v-ry-iEg"/>
                         <outlet property="numberOfRatingsAllLabel" destination="HBC-En-0J8" id="zcn-VA-sec"/>
                         <outlet property="numberOfRatingsCurrentLabel" destination="BQ4-gv-NpL" id="qWD-Ce-7hl"/>
+                        <outlet property="pieChart" destination="aoq-bR-DAH" id="EO5-57-HsF"/>
                         <outlet property="reviewsUpdatedAtLabel" destination="Xac-Et-DWE" id="qbc-Ro-zWW"/>
                         <outlet property="sellerNameLabel" destination="ihI-xp-9G0" id="LBo-SU-15I"/>
                         <outlet property="sizeLabel" destination="x4R-ys-63b" id="eCg-1x-Efe"/>
